# dioxus-browser-extension-builder

./: .env.example  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  dx-ext.toml  justfile  package-lock.json
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  release.yml
demo-extension/: background_index.js  content_index.js  index.js  manifest.json  options.html  options.js  options_index.js  package-lock.json  package.json
demo-extension/background/: Cargo.toml  README.md
demo-extension/background/src/: lib.rs
demo-extension/common/: Cargo.toml  README.md
demo-extension/common/src/: lib.rs
demo-extension/content/: Cargo.toml  README.md
demo-extension/content/src/: lib.rs
demo-extension/options/: Cargo.toml  README.md  build.rs
demo-extension/options/src/: lib.rs
demo-extension/popup/: Cargo.toml  build.rs  input.css  tailwind.config.js
demo-extension/popup/assets/: tailwind.css
demo-extension/popup/src/: content_extractor.rs  lib.rs
demo-extension/server/: Cargo.toml  README.md
demo-extension/server/src/: lib.rs  main.rs
dx-ext/: Cargo.toml  README.md
dx-ext/src/: app.rs  common.rs  efile.rs  extcrate.rs  logging.rs  main.rs  manganis.rs  terminal.rs  utils.rs
dx-ext/templates/: background_entry.js.j2  content_entry.js.j2  crate_cargo.toml.j2  gitignore.j2  index.html.j2  lib_rs.rs.j2  manifest.json.j2  popup_entry.js.j2  workspace_cargo.toml.j2
tests/: test_manganis.rs
webext-api/: Cargo.toml  README.md
webext-api/src/: error.rs  lib.rs  types.rs  utils.rs
webext-api/src/api/: action.rs  alarms.rs  commands.rs  context_menus.rs  declarative_net_request.rs  mod.rs  runtime.rs  scripting.rs  side_panel.rs  storage.rs  tabs.rs
