[package]
authors = ["Jeremy Meek", "Stephen Oketch"]
categories = ["development-tools", "wasm", "web-programming"]
description = "A browser extension builder for dioxus"
edition = "2024"
keywords = ["browser", "builder", "chrome", "extension", "wasm"]
license = "MIT"
name = "dioxus-browser-extension-builder"
repository = "https://github.com/Summit-Sailors/dioxus-browser-extension-builder"
rust-version = "1.87.0"
version = "0.1.9"

[[bin]]
name = "dx-ext"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
futures = { version = "^0.3.31" }
more-itertools = { version = "^0.1.6" }
notify = { version = "^8.0.0" }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "^0.27.1"
strum_macros = "^0.27.1"
tera = "1.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15" }
toml = "0.8.23"
tracing = { version = "^0.1.41" }
tracing-subscriber = { version = "^0.3.19", features = ["fmt"] }

dialoguer = "^0.11.0"

rayon = "^1.10.0"

blake3 = "1.8.2"
regex = "^1.11.1"

walkdir = "^2.5.0"

num_cpus = "1.17.0"

# TUI
lazy_static = "^1.5.0"
ratatui = { version = "^0.29.0", features = ["crossterm", "unstable"] }
throbber-widgets-tui = "^0.8.0"

[lints]
workspace = true
