[package]
authors = ["Jeremy Meek", "Stephen Oketch"]
categories = ["development-tools", "wasm", "web-programming"]
description = "A browser extension builder for dioxus"
edition = "2024"
keywords = ["browser", "builder", "chrome", "extension", "wasm"]
license = "MIT"
name = "dioxus-browser-extension-builder"
repository = "https://github.com/Summit-Sailors/dioxus-browser-extension-builder"
rust-version = "1.90.0"
version = "0.1.9"

[[bin]]
name = "dx-ext"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-walkdir = "2.1.0"
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
dashmap = { workspace = true }
futures = { workspace = true }
more-itertools = { version = "0.1.6" }
notify = { version = "8.2.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17" }
tokio-util = { version = "0.7.16" }
toml = "0.9.7"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }

dialoguer = "0.12.0"
rayon = "1.11.0"
stilts = { version = "0.3.3" }

blake3 = "1.8.2"
regex = "1.11.3"

walkdir = "2.5.0"

num_cpus = "1.17.0"

# TUI
lazy_static = "1.5.0"
ratatui = { version = "0.29.0", features = ["crossterm", "unstable"] }
throbber-widgets-tui = "0.9.0"

[lints]
workspace = true
