[package]
authors = ["Jeremy Meek", "Stephen Oketch"]
categories = ["development-tools", "wasm", "web-programming"]
description = "A browser extension builder for dioxus"
edition = "2024"
keywords = ["browser", "builder", "chrome", "extension", "wasm"]
license = "MIT"
name = "dioxus-browser-extension-builder"
readme = "README.md"
repository = "https://github.com/Summit-Sailors/dioxus-browser-extension-builder"
rust-version = "1.90.0"
version = "0.1.10"

[[bin]]
name = "dx-ext"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-walkdir = "2.1.0"
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
dashmap = { workspace = true }
futures = { workspace = true }
more-itertools = { version = "0.1.6" }
notify = { version = "8.2.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18" }
tokio-util = { version = "0.7.18" }
toml = "0.9.8"
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }

dialoguer = "0.12.0"
rayon = "1.11.0"
stilts = { version = "0.3.3" }

blake3 = "1.8.3"
regex = "1.12.2"

walkdir = "2.5.0"

num_cpus = "1.17.0"

# TUI
ratatui = { version = "0.30.0", features = ["crossterm", "unstable"] }
throbber-widgets-tui = "0.10.0"

[lints]
workspace = true
