[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "content"
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
common = { workspace = true }
webext-api = { workspace = true }

console_error_panic_hook = "0.1.7"
dioxus = { workspace = true }
gloo-utils = "0.2.0"
js-sys = "0.3.81"
readability-rs = "0.5.0"
serde-wasm-bindgen = "0.6.5"
tracing-wasm = { version = "0.2.1" }
wasm-bindgen = { version = "0.2.104", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.54"
wasm-logger = { version = "0.2.0" }
web-extensions = { version = "0.3.0" }
web-extensions-sys = { version = "0.4.2" }
web-sys = { version = "0.3.81", features = ["Document", "Element", "EventTarget", "Location", "NodeList", "Window", "console"] }

anyhow = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true, features = ["wasmbind"] }
url = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true, features = ["js", "serde", "v4"] }


[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }
