[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "popup"
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[dependencies]
common = { path = "../common" }


gloo-utils = "0.2.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "console"] }

readability-rs = "0.5.0"

chrono = { workspace = true, features = ["wasmbind"] }
dioxus = { workspace = true, features = ["web"] }
dioxus-free-icons = { workspace = true }
dioxus-logger = { workspace = true }
dioxus-sdk = { workspace = true }
dioxus-web = "0.6.3"
futures = { workspace = true }
tailwind_fuse = { workspace = true }
tracing-wasm = { version = "0.2.1" }
url = { workspace = true }

anyhow = { workspace = true }
bon = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true, features = ["js", "serde", "v4"] }

[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }
