[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
async-openai = "0.29.4"
axum = { version = "0.8.6", features = ["headers"] }
common = { workspace = true }
dotenvy = "0.15.7"
http = "1.3.1"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
