[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
common = { workspace = true }
dioxus = { version = "0.7.0-rc.1", features = ["fullstack"] }
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }

[features]
server = ["dioxus/server"]
