[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
common = { workspace = true, features = ["server"] }
dioxus = { version = "0.7.3", features = ["fullstack", "server"] }
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }

[features]
default = ["server"]
server = ["dioxus/server"]
